[package]
name = "gymnasium_rust_client"
version = "0.1.0"
authors = ["unrenormalizable <unrenormalizable@gmail.com>"]
edition = '2021'

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
insta = { version = "1.35.1", features = ["yaml"] }
rstest = "0.18.2"
assertor = "0.0.2"
float_eq = "1.0.1"
